--- a/testHex/hexagongridtools.html
+++ b/testHex/hexagongridtools.html
@@ -3,6 +3,8 @@
 <head>
 </head>
 <body>
+	<body style="margin:0;">
+
 
 
 <canvas id="hexCanvas" width="800" height="600" style="width:800px;height:600px" />
